# esoreader

./: .gitignore  MANIFEST  README.md  esoreader.py  pyproject.toml
.github/workflows/: tests.yml
tests/: mock_eplusout.eso  test_datadictionary.py  test_eso_reader.py  test_esoreader_unittest.py
