[project]
name = "esoreader"
version = "1.2.3"
description = "A module for parsing EnergyPlus *.eso files"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Daren Thomas", email = "thomas@arch.ethz.ch" }
]
keywords = ["simulation", "parsing", "energyplus", "pandas"]
dependencies = [
    "pandas>=1.0"
]

[project.urls]
Homepage = "https://github.com/architecture-building-systems/esoreader"
Repository = "https://github.com/architecture-building-systems/esoreader"
Download = "https://github.com/architecture-building-systems/esoreader/archive/1.2.3.tar.gz"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
